--- a/femtools/Makefile.dependencies
+++ b/femtools/Makefile.dependencies
@@ -866,23 +866,16 @@ Parallel_fields.o ../include/parallel_fields.mod: Parallel_fields.F90 \
 ../include/particles.mod: Particles.o
 	@true
 
-../include/h5hut.mod: Particles.o
-	@true
-
-Particles.o ../include/particles.mod ../include/h5hut.mod: Particles.F90 \
-   ../include/H5Block_attribs.f90 ../include/H5Block_io.f90 \
-   ../include/H5Block_model.f90 ../include/H5Part_io.f90 \
-   ../include/H5Part_model.f90 ../include/H5_const.f90 ../include/H5_err.f90 \
-   ../include/H5_file.f90 ../include/H5_file_attribs.f90 ../include/H5_log.f90 \
-   ../include/H5_model.f90 ../include/H5_step_attribs.f90 ../include/H5hut.f90 \
+Particles.o ../include/particles.mod: Particles.F90 \
    ../include/detector_data_types.mod ../include/detector_move_lagrangian.mod \
    ../include/detector_parallel.mod ../include/detector_tools.mod \
-   ../include/elements.mod ../include/fdebug.h ../include/field_options.mod \
-   ../include/fields.mod ../include/fldebug.mod ../include/futils.mod \
-   ../include/global_parameters.mod ../include/h5hut.mod \
+   ../include/elements.mod ../include/embed_python.mod ../include/fdebug.h \
+   ../include/field_options.mod ../include/fields.mod ../include/fldebug.mod \
+   ../include/futils.mod ../include/global_parameters.mod ../include/h5hut.mod \
    ../include/mpi_interfaces.mod ../include/parallel_fields.mod \
    ../include/parallel_tools.mod ../include/pickers.mod \
-   ../include/state_module.mod ../include/time_period.mod
+   ../include/profiler.mod ../include/state_module.mod \
+   ../include/time_period.mod
 
 ../include/petsc_tools.mod: Petsc_Tools.o
 	@true
